# coaching-companion

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  cc_db_class_info.yml  cc_db_diagram.dbml  db_extract.ipynb  db_test.ipynb  pyproject.toml  requirements.txt  yml_2_dbml.ipynb
.devcontainer/: devcontainer.json  environment.yml  postBuild.sh
.github/matchers/: pylint.json
.github/workflows/: ci.yml
databases/diagram/: cc_db_info.yml  cc_dbml_from_db_20240904_195650.dbml  database_20240905_210102.dbml  generate_dbml_from_db.ipynb
src/coaching_companion/: __init__.py  _version.py
src/migration/: __init__.py
tests/: test_main.py  utils.py
tests/models/: list_of_models.yml  test_BaseTableModel.py  test__basetablemodel.py  test_access.py  test_accreditationcertificate.py  test_actionplans.py  test_addplaybyplay.py  test_alias.py  test_annotations.py  test_assessmentsclassroom.py  test_assessmentsdashboard.py  test_assessmentsevaluation.py  test_assessmentslister.py  test_assessmentsrating.py  test_assessmentsreport.py  test_assessmentsreportclassroom.py  test_assessmentssite.py  test_assets.py  test_assignments.py  test_authuser.py  test_authusersettings.py  test_authuserslogallattributes.py  test_authuserslogcompletedgoals.py  test_authuserslogcopgroups.py  test_authuserslogcopgroupsdigest.py  test_authuserslogcreatedat.py  test_authuserslogpartnerships.py  test_authuserslogproperties.py  test_authuserslogreporting.py  test_authuserslogsharedgoals.py  test_authusersloguploads.py  test_authusersubmissions.py  test_awsdashboard.py  (+82 more)
(+138 files in other folders)
