[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coaching_companion"
dynamic = [
        "dependencies",
        "version"
]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Cordero Core", email = "cdcore@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Documentation = "https://github.com/uwcdc/coaching-companion#readme"
Issues = "https://github.com/uwcdc/coaching-companion/issues"
Source = "https://github.com/uwcdc/coaching-companion"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/coaching_companion/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.ruff]
# Same as Black
line-length = 100